--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>hello</p>
+      <!-- Header -->
+  <header class="ubt-header">
+    <div class="logo">
+        <img src="fotot/UBT-LOGO.png" alt="UBT Logo"/>
+    </div>
+    <nav class="ubt-nav">
+      <ul>
+        <li>Home</li>
+        <li>Log in</li>
+        <li>Register</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
     
+
+
+
+
+
+
+
+
+
 </body>
 </html>
