bachelor master phd

--- a/index.html
+++ b/index.html
@@ -14,13 +14,40 @@
     </div>
     <nav class="ubt-nav">
       <ul>
-        <li>Home</li>
-        <li>Log in</li>
-        <li>Register</li>
-        <li>Contact</li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="#" id="loginLink">Log in</a></li>
+        <li><a href="#" id="registerLink">Register</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
     </nav>
   </header>
+
+    <!-- Hero / Program buttons -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Mirësevini në UBT</h1>
+      <p>Institucion i arsimit të lartë me fokus në inovacion, kërkim shkencor dhe zhvillim profesional.</p>
+      <div class="program-buttons">
+        <a class="btn primary" href="batchelor.html">Bachelor</a>
+        <a class="btn primary" href="master.html">Master</a>
+        <a class="btn primary" href="phd.html">PhD</a>
+      </div>
+    </div>
+  </section>
+
+    <!-- Rreth nesh -->
+  <section class="about" id="rreth-nesh">
+    <h2>Rreth nesh</h2>
+    <p>
+      UBT është një institucion modern i arsimit të lartë që ofron programe në fusha të ndryshme, 
+      duke ndërlidhur teorinë me praktikën. Ne investojmë në laboratorë, partneritete me industri 
+      dhe projekte reale të studentëve, për të përgatitur profesionistë të aftë për tregun e punës.
+    </p>
+    <p>
+      Arritjet tona përfshijnë publikime në revista shkencore, start-up të suksesshme të 
+      studentëve, si dhe bashkëpunime ndërkombëtare për shkëmbime akademike dhe kërkime të avancuara.
+    </p>
+  </section>
     
 
 
