--- a/index.html
+++ b/index.html
@@ -48,6 +48,35 @@
       studentëve, si dhe bashkëpunime ndërkombëtare për shkëmbime akademike dhe kërkime të avancuara.
     </p>
   </section>
+
+
+    <!-- Testimonials -->
+  <section class="testimonials">
+    <h2>Mendimet e studentëve</h2>
+    <div class="cards">
+      <article class="card">
+        <img src="fotot/STUDENTI1.png.avif" alt="Student 1"/>
+        <div class="card-body">
+          <h3>Arianit, Bachelor në Shkenca Kompjuterike</h3>
+          <p>“Projekti ynë i fundit me partnerë industrialë më ndihmoi të kuptoj teknologjitë cloud në praktikë.”</p>
+        </div>
+      </article>
+      <article class="card">
+        <img src="fotot/STUDENTJA1.jpg" alt="Student 2"/>
+        <div class="card-body">
+          <h3>Elona, Master në Inxhinieri Softuerike</h3>
+          <p>“Mentorimi dhe laboratorët e UBT-së më dhanë përvojë konkrete në zhvillimin e sistemeve.”</p>
+        </div>
+      </article>
+      <article class="card">
+        <img src="fotot/STUDENTI2.jpg" alt="Student 3"/>
+        <div class="card-body">
+          <h3>Besart, PhD në Inteligjencë Artificiale</h3>
+          <p>“Kërkimi ynë u publikua dhe bashkëpunimi me universitete të huaja ishte i paçmueshëm.”</p>
+        </div>
+      </article>
+    </div>
+  </section>
     
 
 
