--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>Mendimet e studentëve</h2>
     <div class="cards">
       <article class="card">
-        <img src="fotot/STUDENTI1.png.avif" alt="Student 1"/>
+        <img src="fotot/STUDENTI1.png" alt="Student 1"/>
         <div class="card-body">
           <h3>Arianit, Bachelor në Shkenca Kompjuterike</h3>
           <p>“Projekti ynë i fundit me partnerë industrialë më ndihmoi të kuptoj teknologjitë cloud në praktikë.”</p>
