--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Mirësevini në UBT</h1>
       <p>Institucion i arsimit të lartë me fokus në inovacion, kërkim shkencor dhe zhvillim profesional.</p>
       <div class="program-buttons">
-        <a class="btn primary" href="batchelor.html">Bachelor</a>
+        <a class="btn primary" href="Bachelor.html">Bachelor</a>
         <a class="btn primary" href="master.html">Master</a>
         <a class="btn primary" href="phd.html">PhD</a>
       </div>
