--- a/src/frontend/static/Bachelor.html
+++ b/src/frontend/static/Bachelor.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>UBT - Programet Bachelor</title>
-  <link rel="stylesheet" href="Bachelor.css"/>
+  <link rel="stylesheet" href="../css/Bachelor.css"/>
 </head>
 <body>
 
   <!-- Header -->
   <header class="ubt-header">
     <div class="logo">
-      <a href="index.html"><img src="fotot/ubt-logo-1.png" alt="UBT Logo"/></a>
+      <a href="../static/index.html"><img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/></a>
     </div>
     <nav class="ubt-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../static/index.html">Home</a></li>
         <li><a href="#" id="loginLink">Log in</a></li>
         <li><a href="#" id="registerLink">Register</a></li>
         <li><a href="index.html#contact">Contact</a></li>
@@ -28,7 +28,7 @@
     <h1>Programet Bachelor në UBT</h1>
     <p>Programet Bachelor në UBT ofrojnë bazën e parë akademike për studentët që duan të ndërtojnë karrierën e tyre profesionale. 
        Këto programe kombinojnë teori dhe praktikë, duke përgatitur studentët për tregun e punës dhe studime të mëtejshme.</p>
-    <img src="fotot/university3.jpg" alt="Programet Bachelor"/>
+    <img src="../fotot/university3.jpg" alt="Programet Bachelor"/>
   </section>
 
   <!-- Informacion -->
