--- a/src/frontend/static/index.html
+++ b/src/frontend/static/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
       <!-- Header -->
   <header class="ubt-header">
     <div class="logo">
-        <img src="fotot/UBT-LOGO.png" alt="UBT Logo"/>
+        <img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/>
     </div>
     <nav class="ubt-nav">
       <ul>
