--- a/src/frontend/static/master.html
+++ b/src/frontend/static/master.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="../css/master.css">
 </head>
 <body>
       <!-- Header -->
   <header class="ubt-header">
     <div class="logo">
-      <a href="index.html"><img src="fotot/UBT-LOGO.png" alt="UBT Logo"/></a>
+      <a href="index.html"><img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/></a>
     </div>
     <nav class="ubt-nav">
       <ul>
