--- a/src/frontend/static/Bachelor.html
+++ b/src/frontend/static/Bachelor.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="../static/index.html">Home</a></li>
         <li><a href="#" id="loginLink">Log in</a></li>
-        <li><a href="#" id="registerLink">Register</a></li>
+        <li><a href="Register.html" id="registerLink">Register</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
     </nav>
