--- a/src/frontend/static/index.html
+++ b/src/frontend/static/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="#" id="loginLink">Log in</a></li>
-        <li><a href="#" id="registerLink">Register</a></li>
+        <li><a href="Register.html" id="registerLink">Register</a></li>
         <li><a href="">Contact</a></li>
       </ul>
     </nav>
