--- a/src/frontend/static/index.html
+++ b/src/frontend/static/index.html
@@ -15,7 +15,7 @@
     <nav class="ubt-nav">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="#" id="loginLink">Log in</a></li>
+        <li><a href="Login.html" id="loginLink">Log in</a></li>
         <li><a href="Register.html" id="registerLink">Register</a></li>
         <li><a href="">Contact</a></li>
       </ul>
