--- a/src/frontend/static/index.html
+++ b/src/frontend/static/index.html
@@ -77,13 +77,37 @@
       </article>
     </div>
   </section>
-    
-
-
-
-
-
-
+    <section class="contact" id="contact">
+    <h2>Kontakt</h2>
+    <p>Na kontaktoni për pyetje rreth programeve, regjistrimit dhe partneriteteve.</p>
+    <form id="contactForm" class="contact-form">
+      <div class="form-row">
+        <label for="contactName">Emri</label>
+        <input type="text" id="contactName" name="contactName" placeholder="Shkruani emrin"/>
+      </div>
+      <div class="form-row">
+        <label for="contactPhone">Numri i telefonit</label>
+        <input type="tel" id="contactPhone" name="contactPhone" placeholder="+383 xx xxx xxx"/>
+      </div>
+      <div class="form-row">
+        <label for="contactMessage">Mesazhi</label>
+        <textarea id="contactMessage" name="contactMessage" placeholder="Mesazhi juaj..."></textarea>
+      </div>
+      <button type="submit" class="btn secondary">Dërgo</button>
+      <p class="form-feedback" id="contactFeedback" aria-live="polite"></p>
+    </form>
+  </section>
+ <!-- footer -->
+<footer>
+    <div class="footer-container">
+        <div class="footer-info">
+            <h3>UBT-Student Management</h3>
+            <p>© 2025 UBTStudentManagement. All rights reserved.</p>
+            <p>Email: support@ubtstudentmanagement.com</p>
+            <p>Phone: +383 49 445 676</p>
+        </div>
+    </div>
+</footer>
 
 
 
