login.css-ndryshime+ndryshime tjera

--- a/src/frontend/static/Bachelor.html
+++ b/src/frontend/static/Bachelor.html
@@ -16,7 +16,7 @@
     <nav class="ubt-nav">
       <ul>
         <li><a href="../static/index.html">Home</a></li>
-        <li><a href="#" id="loginLink">Log in</a></li>
+        <li><a href="Login.html" id="loginLink">Log in</a></li>
         <li><a href="Register.html" id="registerLink">Register</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
@@ -48,7 +48,11 @@
 
   <!-- Footer -->
   <footer class="ubt-footer">
-    <p>&copy; <span id="year"></span> UBT. Të gjitha të drejtat e rezervuara.</p>
+    
+            <h3>UBT-Student Management</h3>
+            <p>© 2025 UBTStudentManagement. All rights reserved.</p>
+            <p>Email: support@ubtstudentmanagement.com</p>
+            <p>Phone: +383 49 445 676</p>
   </footer>
 
   <script src="script.js"></script>
