--- a/src/frontend/static/Register.html
+++ b/src/frontend/static/Register.html
@@ -13,6 +13,7 @@
         <form id="registerForm">
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Enter your name" required>
+            <div id="nameerror" class="error"><p>gabim tek emri</p></div>
 
             <label for="lastname">Last Name</label>
             <input type="text" id="lastname" placeholder="Enter your last name" required>
