--- a/src/frontend/static/index.html
+++ b/src/frontend/static/index.html
@@ -17,7 +17,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="Login.html" id="loginLink">Log in</a></li>
         <li><a href="Register.html" id="registerLink">Register</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -76,7 +76,7 @@
         </div>
       </article>
     </div>
-  </section>
+  </section>  
     <section class="contact" id="contact">
     <h2>Kontakt</h2>
     <p>Na kontaktoni për pyetje rreth programeve, regjistrimit dhe partneriteteve.</p>
