--- a/src/frontend/static/Register.html
+++ b/src/frontend/static/Register.html
@@ -7,13 +7,30 @@
     <link rel="stylesheet" href="../css/Register.css">
 </head>
 <body>
+              <!-- Header -->
+  <header class="ubt-header">
+    <div class="logo">
+        <img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/>
+    </div>
+    <nav class="ubt-nav">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="Login.html" id="loginLink">Log in</a></li>
+        <li><a href="Register.html" id="registerLink">Register</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <div id="erresuar">
+  </div>
+
+  
     <div class="register-container">
-        <h2>Register</h2>
         <form id="registerForm">
+            <h2>Register</h2>
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Enter your name" required>
-            <div id="nameerror" class="error"><p>gabim tek emri</p></div>
 
             <label for="lastname">Last Name</label>
             <input type="text" id="lastname" placeholder="Enter your last name" required>
