--- a/src/frontend/static/Bachelor.html
+++ b/src/frontend/static/Bachelor.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-  <!-- Header -->
+      <!-- Header -->
   <header class="ubt-header">
     <div class="logo">
-      <a href="../static/index.html"><img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/></a>
+        <img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/>
     </div>
     <nav class="ubt-nav">
       <ul>
-        <li><a href="../static/index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="Login.html" id="loginLink">Log in</a></li>
         <li><a href="Register.html" id="registerLink">Register</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -26,8 +26,17 @@
   <!-- Hero -->
   <section class="page-hero">
     <h1>Programet Bachelor në UBT</h1>
-    <p>Programet Bachelor në UBT ofrojnë bazën e parë akademike për studentët që duan të ndërtojnë karrierën e tyre profesionale. 
-       Këto programe kombinojnë teori dhe praktikë, duke përgatitur studentët për tregun e punës dhe studime të mëtejshme.</p>
+    <p>
+      Programi Bachelor në Universitetin për Biznes dhe Teknologji (UBT) është i dizajnuar për t’u ofruar studentëve
+     njohuri të forta teorike dhe aftësi praktike në fusha të ndryshme akademike. 
+     Programet janë të strukturuara sipas standardeve bashkëkohore të arsimit dhe nevojave të tregut të punës.
+    </p>
+    <p>
+      Gjatë studimeve Bachelor, studentët përfshihen në ligjërata interaktive, punë praktike, projekte individuale dhe ekipore, duke zhvilluar mendim kritik, aftësi analitike dhe profesionale. Programi inkurajon përdorimin e teknologjive moderne dhe zgjidhjen kreative të problemeve reale.
+    </p>
+    <p>
+      Qëllimi i programit Bachelor në UBT është të përgatisë studentë kompetentë dhe të gatshëm për karrierë profesionale ose për vazhdim të studimeve në nivelin Master, duke ndërtuar një bazë të fortë akademike dhe profesionale.
+    </p>
     <img src="../fotot/university3.jpg" alt="Programet Bachelor"/>
   </section>
 
