--- a/src/frontend/static/index.html
+++ b/src/frontend/static/index.html
@@ -43,7 +43,15 @@
       duke ndërlidhur teorinë me praktikën. Ne investojmë në laboratorë, partneritete me industri 
       dhe projekte reale të studentëve, për të përgatitur profesionistë të aftë për tregun e punës.
     </p>
+    <p>UBT ofron një mjedis mësimor bashkëkohor, duke kombinuar teorinë me praktikën, 
+      teknologjinë moderne dhe zhvillimin e vazhdueshëm profesional. Universiteti inkurajon kreativitetin, 
+      mendimin kritik dhe zhvillimin personal të studentëve të tij.</p>
     <p>
+      <p>
+        UBT ka realizuar bashkëpunime të shumta me universitete dhe institucione ndërkombëtare, 
+        duke ofruar mundësi për shkëmbime akademike, trajnime profesionale dhe projekte të përbashkëta kërkimore. 
+        Këto bashkëpunime kanë kontribuar në rritjen e cilësisë së mësimdhënies dhe zgjerimin e përvojës akademike të studentëve.
+      </p>
       Arritjet tona përfshijnë publikime në revista shkencore, start-up të suksesshme të 
       studentëve, si dhe bashkëpunime ndërkombëtare për shkëmbime akademike dhe kërkime të avancuara.
     </p>
@@ -76,7 +84,9 @@
         </div>
       </article>
     </div>
-  </section>  
+  </section> 
+
+
     <section class="contact" id="contact">
     <h2>Kontakt</h2>
     <p>Na kontaktoni për pyetje rreth programeve, regjistrimit dhe partneriteteve.</p>
@@ -93,7 +103,7 @@
         <label for="contactMessage">Mesazhi</label>
         <textarea id="contactMessage" name="contactMessage" placeholder="Mesazhi juaj..."></textarea>
       </div>
-      <button type="submit" class="btn secondary">Dërgo</button>
+      <button type="submit" class="btnsecondary">Dërgo</button>
       <p class="form-feedback" id="contactFeedback" aria-live="polite"></p>
     </form>
   </section>
