--- a/src/frontend/static/Register.html
+++ b/src/frontend/static/Register.html
@@ -25,25 +25,30 @@
   <div id="erresuar">
   </div>
 
-  
-    <div class="register-container">
-        <form id="registerForm">
-            <h2>Register</h2>
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name" required>
+  <div class="register-container">
+    <form id="registerForm">
+        <h2>Register</h2>
 
-            <label for="lastname">Last Name</label>
-            <input type="text" id="lastname" placeholder="Enter your last name" required>
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Enter your name" required>
+        <small class="error" id="nameError"></small>
 
-            <label for="username">Username</label>
-            <input type="text" id="username" placeholder="Choose a username" required>
+        <label for="lastname">Last Name</label>
+        <input type="text" id="lastname" placeholder="Enter your last name" required>
+        <small class="error" id="lastnameError"></small>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter password" required>
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Choose a username" required>
+        <small class="error" id="usernameError"></small>
 
-            <button type="submit">Register</button>
-        </form>
-    </div>
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter password" required>
+        <small class="error" id="passwordError"></small>
+
+        <button type="submit">Register</button>
+    </form>
+</div>
+
     <script src="../js/register.js"></script>
 
 </body>
