rregullim-master phd

--- a/src/frontend/static/master.html
+++ b/src/frontend/static/master.html
@@ -1,26 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sq">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/master.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>UBT - Programet Bachelor</title>
+  <link rel="stylesheet" href="../css/Bachelor.css"/>
 </head>
 <body>
+
       <!-- Header -->
   <header class="ubt-header">
     <div class="logo">
-      <a href="index.html"><img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/></a>
+        <img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/>
     </div>
     <nav class="ubt-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#" id="loginLink">Log in</a></li>
-        <li><a href="#" id="registerLink">Register</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="Login.html" id="loginLink">Log in</a></li>
+        <li><a href="Register.html" id="registerLink">Register</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
+
+  <!-- Hero -->
+  <section class="page-hero">
+    <h1>Programet Master në UBT</h1>
+    <p>
+       Programi Master në UBT është i dizajnuar për të përgatitur studentë me njohuri të avancuara akademike dhe aftësi praktike, të cilat u përgjigjen kërkesave të tregut modern të punës dhe zhvillimeve bashkëkohore në fushën përkatëse. Ky program ofron një kombinim të balancuar ndërmjet teorisë, kërkimit shkencor dhe aplikimit praktik.
+    </p>
+    <p>
+     Studentët përfitojnë nga staf akademik i kualifikuar, infrastrukturë moderne, si dhe qasje në projekte reale, punë praktike dhe bashkëpunime me industri dhe institucione vendore e ndërkombëtare. Programi Master në UBT synon zhvillimin e mendimit kritik, aftësive analitike dhe kompetencave profesionale që i përgatisin studentët për role udhëheqëse, kërkim shkencor apo vazhdim të studimeve në nivel doktorature.
+    </p>
+    <p>
+      Me një kurrikulë të harmonizuar me standardet evropiane dhe me fokus në inovacion dhe teknologji, Masteri në UBT u ofron studentëve mundësi reale për zhvillim profesional dhe avancim në karrierë, si brenda vendit ashtu edhe në tregun ndërkombëtar.
+    </p>
+    <img src="../fotot/university3.jpg" alt="Programet Bachelor"/>
+  </section>
+
+  <!-- Informacion -->
+<section class="info">
+  <h2>Çfarë ofrojnë programet Master?</h2>
+  <ul>
+    <li><strong>Shkenca Kompjuterike:</strong> Sisteme të avancuara softuerike, inteligjencë artificiale, analiza e të dhënave, siguri kibernetike.</li>
+    <li><strong>Inxhinieri:</strong> Projektim i avancuar, optimizim sistemesh, teknologji bashkëkohore dhe kërkim shkencor.</li>
+    <li><strong>Ekonomi dhe Menaxhim:</strong> Menaxhim strategjik, financa të avancuara, udhëheqje, analiza të tregut.</li>
+    <li><strong>Arkitekturë dhe Dizajn:</strong> Projekte të avancuara, urbanizëm, dizajn inovativ, kërkim dhe konceptim profesional.</li>
+  </ul>
+  <p>
+    Programet Master zgjasin zakonisht 1 deri në 2 vite dhe fokusohen në thellimin e njohurive profesionale, 
+    zhvillimin e aftësive analitike dhe kërkimit shkencor. Studentët angazhohen në projekte të avancuara, 
+    studime rastesh dhe punim diplome, duke u përgatitur për role udhëheqëse, specializim profesional 
+    ose vazhdim të studimeve në nivel doktorature.
+  </p>
+</section>
+
+  <!-- Footer -->
+  <footer class="ubt-footer">
     
+            <h3>UBT-Student Management</h3>
+            <p>© 2025 UBTStudentManagement. All rights reserved.</p>
+            <p>Email: support@ubtstudentmanagement.com</p>
+            <p>Phone: +383 49 445 676</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
