--- a/src/frontend/static/phd.html
+++ b/src/frontend/static/phd.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sq">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/phd.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>UBT - Programet Bachelor</title>
+  <link rel="stylesheet" href="../css/Bachelor.css"/>
 </head>
 <body>
+
       <!-- Header -->
   <header class="ubt-header">
     <div class="logo">
-      <a href="index.html"><img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/></a>
+        <img src="../fotot/UBT-LOGO.png" alt="UBT Logo"/>
     </div>
     <nav class="ubt-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#" id="loginLink">Log in</a></li>
-        <li><a href="#" id="registerLink">Register</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="Login.html" id="loginLink">Log in</a></li>
+        <li><a href="Register.html" id="registerLink">Register</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
+
+  <!-- Hero -->
+  <section class="page-hero">
+    <h1>Programet PhD në UBT</h1>
+    <p>
+       Programi PhD është niveli më i lartë i studimeve akademike dhe është i orientuar drejt zhvillimit të kërkimit shkencor të avancuar dhe krijimit të njohurive të reja në fushat përkatëse. Ky program u ofron kandidatëve mundësinë të thellojnë ekspertizën e tyre akademike, të zhvillojnë mendim kritik të nivelit të lartë dhe të kontribuojnë në mënyrë origjinale në zhvillimin shkencor dhe profesional.
+    </p>
+    <p>
+      Studentët e PhD-së punojnë ngushtë me mentorë akademikë të kualifikuar, angazhohen në projekte kërkimore, publikojnë punime shkencore në revista dhe konferenca ndërkombëtare, si dhe marrin pjesë aktive në jetën akademike dhe shkencore. Programi përfshin metodologji të avancuara të kërkimit, analiza teorike dhe empirike, si dhe zhvillimin dhe mbrojtjen e disertacionit shkencor.
+    </p>
+    <p>
+      Me standarde të harmonizuara me praktikat ndërkombëtare dhe fokus në inovacion, kërkim dhe ekselencë akademike, programi PhD përgatit kandidatët për karrierë akademike, kërkim shkencor të pavarur, role udhëheqëse në institucione arsimore, kërkimore dhe industri të specializuara, si në nivel kombëtar ashtu edhe ndërkombëtar
+    </p>
+    <img src="../fotot/university3.jpg" alt="Programet Bachelor"/>
+  </section>
+
+  <!-- Informacion -->
+  <section class="info">
+  <h2>Çfarë ofrojnë programet PhD?</h2>
+  <ul>
+    <li><strong>Shkenca Kompjuterike:</strong> Kërkim shkencor i avancuar, inteligjencë artificiale, sisteme të shpërndara, publikime akademike.</li>
+    <li><strong>Inxhinieri:</strong> Inovacion teknologjik, zhvillim metodologjish të reja, optimizim sistemesh komplekse.</li>
+    <li><strong>Ekonomi dhe Menaxhim:</strong> Teori ekonomike të avancuara, politika publike, kërkim empirik dhe analiza shkencore.</li>
+    <li><strong>Arkitekturë dhe Dizajn:</strong> Kërkim i thelluar në dizajn, urbanizëm i qëndrueshëm, teori dhe kritikë arkitekturore.</li>
+  </ul>
+  <p>
+    Programet PhD janë të fokusuara në kërkim shkencor të pavarur dhe zgjasin zakonisht 3 deri në 4 vite. 
+    Studentët zhvillojnë studime origjinale që kontribuojnë në avancimin e njohurive në fushën përkatëse, 
+    publikojnë punime shkencore dhe bashkëpunojnë me mentorë akademikë dhe institucione ndërkombëtare. 
+    Programi PhD përgatit kandidatët për karrierë akademike, kërkim shkencor dhe role udhëheqëse në sektorë të specializuar.
+  </p>
+</section>
+
+
+  <!-- Footer -->
+  <footer class="ubt-footer">
     
+          <h3>UBT-Student Management</h3>
+          <p>© 2025 UBTStudentManagement. All rights reserved.</p>
+          <p>Email: support@ubtstudentmanagement.com</p>
+          <p>Phone: +383 49 445 676</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
