--- a/src/frontend/static/Login.html
+++ b/src/frontend/static/Login.html
@@ -31,11 +31,11 @@
         <h2>Log in</h2>
 
         <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter a username" required>
+        <input type="text" id="username" placeholder="Enter a username" name="email" required>
         <small class="error" id="usernameError"></small>
 
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter password" required>
+        <input type="password" id="password" placeholder="Enter password" name="password" required>
         <small class="error" id="passwordError"></small>
 
         <button type="submit">Log in</button>
