--- a/src/frontend/static/Register.html
+++ b/src/frontend/static/Register.html
@@ -33,13 +33,17 @@
         <input type="text" id="name" name="name" placeholder="Enter your name" required>
         <small class="error" id="nameError"></small>
 
-        <label for="lastname">Last Name</label>
-        <input type="text" id="lastname" name="surname" placeholder="Enter your last name" required>
-        <small class="error" id="lastnameError"></small>
+        <label for="surname">Last Name</label>
+        <input type="text" id="surname" name="surname" placeholder="Enter your last name" required>
+        <small class="error" id="surnameError"></small>
 
-        <!-- <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Choose a username" required>
-        <small class="error" id="usernameError"></small> -->
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" placeholder="Choose a username" required>
+        <small class="error" id="usernameError"></small> 
+
+          <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="email" required>
+        <small class="error" id="emailError"></small> 
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Enter password" required>
