--- a/src/frontend/static/Register.html
+++ b/src/frontend/static/Register.html
@@ -30,19 +30,19 @@
         <h2>Register</h2>
 
         <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Enter your name" required>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
         <small class="error" id="nameError"></small>
 
         <label for="lastname">Last Name</label>
-        <input type="text" id="lastname" placeholder="Enter your last name" required>
+        <input type="text" id="lastname" name="surname" placeholder="Enter your last name" required>
         <small class="error" id="lastnameError"></small>
 
-        <label for="username">Username</label>
+        <!-- <label for="username">Username</label>
         <input type="text" id="username" placeholder="Choose a username" required>
-        <small class="error" id="usernameError"></small>
+        <small class="error" id="usernameError"></small> -->
 
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter password" required>
+        <input type="password" id="password" name="password" placeholder="Enter password" required>
         <small class="error" id="passwordError"></small>
 
         <button type="submit">Register</button>
