--- a/src/frontend/static/Register.html
+++ b/src/frontend/static/Register.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="register-container">
-    <form id="registerForm">
+    <form id="registerForm" action="src/backend/database/register.php" method="POST">
         <h2>Register</h2>
 
         <label for="name">Name</label>
@@ -37,13 +37,13 @@
         <input type="text" id="surname" name="surname" placeholder="Enter your last name" required>
         <small class="error" id="surnameError"></small>
 
-        <label for="username">Username</label>
+        <!-- <label for="username">Username</label>
         <input type="text" id="username" name="username" placeholder="Choose a username" required>
         <small class="error" id="usernameError"></small> 
 
           <label for="email">Email</label>
       <input type="email" id="email" name="email" placeholder="email" required>
-        <small class="error" id="emailError"></small> 
+        <small class="error" id="emailError"></small>  -->
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Enter password" required>
